# YL-PyGraphicsAPI

./: README.md  pyproject.toml
Examples/: basic_usage.py  minimal.py  offline_demo_dpg.py  offline_demo_glfw.py  sensor_demo_dpg.py  sensor_demo_glfw.py
assets/models/Camera/: Camera.mtl  credit.txt
assets/models/DataLogger/: DL-3.mtl
assets/models/Embedded/: EM-2_6.mtl  EM-3.mtl
src/yostlabs/graphics/: core.py  font.py  scene_prefabs.py  texture_renderer.py
src/yostlabs/graphics/dpg/: __init__.py  scene_prefabs.py
src/yostlabs/graphics/glfw/: scene_components.py
src/yostlabs/graphics/loaders/: obj_loader.py
src/yostlabs/graphics/shaders/: arrow_vertex.glsl  vertex.glsl
yostlabs/: __init__.py
yostlabs/graphics/: __init__.py  context.py  prefabs.py  resources.py  scene_components.py  scene_prefabs.py
yostlabs/graphics/dpg/: scene_components.py
yostlabs/graphics/glfw/: __init__.py
yostlabs/graphics/shaders/: arrow_fragment.glsl  arrow_geometry.glsl  fragment.glsl  texture_fragment.glsl  texture_vertex.glsl
yostlabs/tools/: __init__.py  animate_sensor.py
